<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow>
        <TextView/>

                <TextView/>
        <Switch
            android:id="@+id/switch_post_or_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            android:splitTrack="false"
            android:layout_gravity="right"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textOff="@string/switch_prefix"
            android:textOn="@string/switch_postfix" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/display_screen"
            android:text="@string/display_screen"
            android:gravity="right"
            android:textAlignment="gravity"/>
    </TableRow>
    <TableRow>

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/button_1"
            android:onClick="buttonOneOnClick"
            android:text="@string/button_1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_2"
            android:onClick="buttonTwoOnClick"
            android:text="@string/button_2"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_3"
            android:onClick="buttonThreeOnClick"
            android:text="@string/button_3"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/button_plus"
            android:onClick="buttonPlusOnClick"
            android:text="@string/button_plus"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/button_4"
            android:onClick="buttonFourOnClick"
            android:text="@string/button_4"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_5"
            android:onClick="buttonFiveOnClick"
            android:text="@string/button_5"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_6"
            android:onClick="buttonSixOnClick"
            android:text="@string/button_6"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_minus"
            android:onClick="buttonMinusOnClick"
            android:text="@string/button_minus" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/button_7"
            android:onClick="buttonSevenOnClick"
            android:text="@string/button_7"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_8"
            android:onClick="buttonEightOnClick"
            android:text="@string/button_8"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_9"
            android:onClick="buttonNineOnClick"
            android:text="@string/button_9"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/button_multiply"
            android:onClick="buttonMultiplyOnClick"
            android:text="@string/button_multiply" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/button_period"
            android:onClick="buttonPeriodOnClick"
            android:text="@string/button_period" />
        <Button
            android:id="@+id/button_0"
            android:onClick="buttonZeroOnClick"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/button_equals"
            android:onClick="buttonEqualsOnClick"
            android:text="@string/button_equals" />

        <Button
            android:id="@+id/button_divide"
            android:onClick="buttonDivideOnClick"
            android:text="@string/button_divide" />

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/button2"
            android:layout_height="wrap_content"
            android:text="@string/button_clear" />
        <Button
            android:id="@+id/button_deliminator"
            android:layout_height="wrap_content"
            android:text="@string/button_deliminator" />

    </TableRow>

</TableLayout>